<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- APP DESCRIPTION -->
    <string name="app_name">Renata</string>
    <string name="copyright">© 2023 RENATA</string>
    <!-- NAVIGATION -->
    <string name="history_nav">History</string>
    <string name="account_nav">Account</string>
    <!-- BUTTON TEXT -->
    <string name="send_otp_button">Send OTP</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="verify_button">Verify</string>
    <string name="camera_button">Camera</string>
    <string name="gallery_button">Gallery</string>
    <string name="detect_button">Detect</string>
    <string name="logout_button">Logout</string>
    <string name="setting_button">Setting</string>
    <string name="notification_enabled_button">Notification Enabled</string>
    <string name="notification_disabled_button">Notification Disabled</string>
    <string name="change_language_button">Change Language</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="dark_mode">Dark</string>
    <string name="confirm_password_button">Confirm Password</string>
    <string name="change_button">Change</string>
    <string name="try_again_button">Try Again</string>
    <string name="result_button">Result</string>
    <string name="grow_button">How To Grow</string>
    <!-- ERROR TEXT -->
    <string name="error_email">Invalid email format</string>
    <string name="error_password">Your password must have at least 8 characters and include number, uppercase and lowercase letters, and at least one symbol</string>
    <string name="error_confirm_password">"Password and Confirm Password must match</string>
    <!-- TOOLBAR TEXT -->
    <string name="account_toolbar">Account</string>
    <string name="history_toolbar">History</string>
    <string name="scanner_toolbar">Scanner</string>
    <string name="setting_toolbar">Setting</string>
    <string name="result_toolbar">Result</string>
    <string name="change_avatar_toolbar">Change Avatar</string>
    <string name="update_profile_toolbar">Update Profile</string>
    <string name="detail_history_toolbar">History Detail</string>
    <string name="how_to_grow_toolbar">How To Grow</string>
    <!-- INTENT TEXT -->
    <string name="want_register">Don\'t have an account?</string>
    <string name="register_intent">Register here</string>
    <string name="want_login">Already have an account?</string>
    <string name="login_intent">Login here</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="want_resend">Did not receive OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <!-- INPUT TEXT TITLE -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TITLE -->
    <string name="login_page">Login</string>
    <string name="login_req">Enter email and password</string>
    <string name="register_page">Register</string>
    <string name="register_req">Enter the data to create an account</string>
    <string name="otp_verification_page">OTP Verification</string>
    <string name="otp_sent">The 4 digit code has been sent to</string>
    <string name="otp_req">Enter the code to verification</string>
    <string name="forgot_pass_page">Forgot Password</string>
    <string name="forgot_pass_req">Enter your Email</string>
    <string name="reset_password_page">Reset Password</string>
    <string name="reset_password_req">Enter your new password</string>
    <string name="soil_type_title">Soil Type</string>
    <string name="plant_recommendations_title">Plant Recommendations</string>
    <string name="insert_your_plant_name_title">Insert Your Plant Name</string>
    <!-- PLACEHOLDER -->
    <string name="soil_placeholder">soil</string>
    <string name="plant_placeholder">plant</string>
    <string name="holder_name">Username</string>
    <string name="holder_email">User Email</string>
    <string name="date_placeholder">date</string>
    <!-- MESSAGE -->
    <string name="insert_email">Please insert your Email</string>
    <string name="insert_pass">Please insert your Password</string>
    <string name="insert_name">Please insert your Name</string>
    <string name="login_fail">Login Failed</string>
    <string name="login_fail_cause1">Invalid Email/Password</string>
    <string name="login_fail_cause2">Make sure Email and Password are filled in correctly</string>
    <string name="regis_fail">Registration Failed</string>
    <string name="regis_success">Registration Success</string>
    <string name="regis_fail_cause1">Sorry, there was an error creating your account. Please try again later</string>
    <string name="regis_fail_cause2">Sorry, your registration failed. Make sure all the information entered is correct and complete</string>
    <string name="regis_fail_cause3">Sorry, your registration failed. Please ensure that your password and confirmation password are the same</string>
    <string name="regis_to_auth">Congratulations! Your account has been successfully created. Please authentication your account first to get started</string>
    <string name="auth_success">Authentication Success</string>
    <string name="auth_to_login">Congratulations! Your account has been successfully created. Please login to get started</string>
    <string name="auth_to_reset">Now let\'s reset the password</string>
    <string name="alarm_message">Have you checked the type of soil around you? Let\'s scan it now</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="resend_otp_req">Resend OTP Request</string>
    <string name="resend_otp_res">The OTP has been sent again, please check your email</string>
    <string name="alarm_message1">Have you scanned the soil around you?</string>
    <string name="alarm_message2">Let\'s scan now</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_changes_cause">Your profile changes will be saved</string>
    <string name="success_upload">Upload Successfully</string>
    <string name="reset_success">Reset Password Success</string>
    <string name="reset_to_login">Congratulations! Your password has been reset. Please login to get started</string>
    <string name="reset_fail">Reset Password Failed</string>
    <string name="reset_fail_cause3">Password and Confirm Password must match</string>
    <string name="reset_fail_cause2">Your password must have at least 8 characters and include number, uppercase and lowercase letters, and at least one symbol</string>
    <string name="reset_fail_cause1">Password and confirm password cannot be empty</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="send_otp_fail">Unable to send OTP</string>
    <string name="send_otp_fail_cause1">Invalid Email</string>
    <string name="send_otp_fail_cause2">Make sure Email are filled in correctly</string>
    <string name="history_not_found">History Not Found</string>
    <string name="scan_failed">Scan Failed</string>
    <string name="scan_success">Scan Success</string>
    <string name="alert_no_image">No Image Detected</string>
    <string name="image_req">Please Choose The Image First</string>
    <string name="exPhone">ex : 085718620532</string>
    <string name="exFirstName">ex : John</string>
    <string name="exLastName">ex : Doe</string>
    <string name="exAddress">ex : Cimahi, Jawa Barat</string>
    <string name="cd_back">Back</string>
    <string name="cd_previewImage">Profile Image Placeholder</string>
    <string name="date_title">Scan Date</string>
    <string name="cd_soil_image">Soil Image</string>
    <string name="cd_scan">Scan</string>
    <string name="cd_profile">Profile</string>
    <string name="change_avatar_button">Change Avatar</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="phone_title">Phone</string>
    <string name="address_title">Address</string>
    <string name="scan_again_button">Scan Again</string>
    <string name="treat_button">Treat</string>
    <string name="plant_button">Plant</string>
    <string name="change_profile">Change Profile</string>
    <string name="resend_otp_fail">Resend OTP Failed</string>
    <string name="send_otp_fail_2">Send OTP Failed</string>
    <string name="auth_fail">Authentication Fail</string>
    <string name="change_profile_fail">Change Failed</string>
    <string name="choose_image">Choose the image first</string>
    <string name="fail_show_history">Failed to display history</string>
    <string name="otp_sent_sucess">OTP has been sent</string>
    <string name="otp_sent_success_mes">The OTP has been sent, please check your email</string>
    <string name="insert_plant_error">Please Insert Plant Name</string>
    <string name="grow_step_fail">Failed to get step on grow</string>
    <string name="grow_step_fail_cause">Make sure you enter the correct plant name</string>
</resources>