<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="#CAC7C7">

    <ImageView
        android:id="@+id/iv_soilImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:contentDescription="@string/cd_soil_image"
        android:src="@drawable/renata" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_soilName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soil_placeholder"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_scanDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>